# f16

./: .clang-format  .clang-tidy  .cmake-format.yaml  .gitignore  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  README.md  README_f16lib.md  README_f16server.md  conanfile.txt
.devcontainer/: Dockerfile  Dockerfile.alpine  Dockerfile.gcc  devcontainer.json
.github/: FUNDING.yml
.github/actions/setup_cache/: action.yml
.github/workflows/: ci.yml  codeql-analysis.yml  macos.yml  tests.yml  ubuntu.yml  windows.yml
cmake/: SetCppStandard.cmake  add_FetchContent_MakeAvailable.cmake
cmake/project_options/: Conan.cmake  Doxygen.cmake  DynamicProjectOptions.cmake  Index.cmake  PackageProject.cmake  Sanitizers.cmake  StaticAnalyzers.cmake
configured_files/: config.hpp.in
fuzz_test/: CMakeLists.txt  fuzz_mime_types.cpp  fuzz_request_parser.cpp  fuzz_router.cpp  fuzz_tester.cpp
src/: CMakeLists.txt  main.cpp
src/examples/: CMakeLists.txt  complete.cpp  https_static.cpp  rest.cpp  static.cpp
src/lib/: CMakeLists.txt  base_connection.hpp  connection.cpp  connection.hpp  connection_manager.cpp  connection_manager.hpp  dynamic_content.cpp  dynamic_content.hpp  dynamic_content_get.cpp  dynamic_content_get.hpp  f16asio.hpp  header.hpp  http_handler.hpp  http_request.hpp  http_server.cpp  http_server.hpp  https_server.cpp  https_server.hpp  mime_types.cpp  mime_types.hpp  path_router.cpp  path_router.hpp  plain_connection.cpp  plain_connection.hpp  reply.cpp  reply.hpp  request.hpp  request_handler.cpp  request_handler.hpp  request_parser.cpp  request_parser.hpp  server.cpp  server.hpp  ssl_connection.cpp  ssl_connection.hpp  static_content.cpp  static_content.hpp  string.hpp  url.cpp  url.hpp
src/server/: CMakeLists.txt  f16.json  main.cpp
test/: CMakeLists.txt  catch_main.cpp  constexpr_tests.cpp  tests.cpp
